Repos sql query changed so that only 5 random records are shown.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,7 +46,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="track: ${tracks}">
-                    <td th:text="${track.getTrackName()}"></td>
+                    <td th:text="${track.getName()}"></td>
                 </tr>
                 </tbody>
             </table>
