--- a/src/main/resources/templates/trackDetails.html
+++ b/src/main/resources/templates/trackDetails.html
@@ -2,9 +2,41 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Track details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
 </head>
 <body>
-    <h1>TrackDetails</h1>
+    <h1>Track details</h1>
+    <div class="container-fluid">
+        <div class="col">
+            <table class="table">
+                <thead class="table-header">
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Artist</th>
+                    <th scope="col">Album</th>
+                    <th scope="col">Genre</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="track: ${trackList}">
+                    <th  scope="row" th:text="${track.getName()}"></th>
+                    <td th:text="${track.getArtistName()}"></td>
+                    <td th:text="${track.getAlbumTitle()}"></td>
+                    <td th:text="${track.getGenreName()}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <form action="/">
+                <input class="ui-button" type="submit" value="Go back" />
+            </form>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
